feat : generate active.js for account activation
+ refactored active.js not to occur error
+ changed @model/user.js (Number to Boolean)
+ added active node (mongoose find method -> token validator)
+ added querystring to prevent url-encode-error
* edited swagger.js (add node /user/active)
* edited active.html (show app logo and design changed)
