# routes/auth/index.js
@@ -1,8 +1,10 @@
 import { Router } from 'express';
 import signup from './signup';
+import active from './active';
 
 const router = Router();
 
 router.use('/signup',signup);
+router.use('/active',active);
 
 export default router;
